# stellar-hackathon

Proofchain/Backend/: requirments.txt
Proofchain/Backend/app/: main.py
Proofchain/Backend/app/api/v1/: __init__.py  assets.py  auth.py
Proofchain/Backend/app/core/: config.py  security.py  ssecurity.py
Proofchain/Backend/app/db/: session.py
Proofchain/Backend/app/db/migrations/versions/: 001_init_auth.py
Proofchain/Backend/app/dependencies/: __init__.py  auth_deps.py
Proofchain/Backend/app/models/: __init__.py  asset.py  file.py  user.py
Proofchain/Backend/app/schemas/: __init__.py  asset.py  auth.py  file.py
Proofchain/Backend/app/services/: __init__.py  asset_service.py  auth_service.py  blockchain_service.py
proofchain01/backend/: pyproject.toml  requirements.txt
proofchain01/backend/app/: main.py
proofchain01/backend/app/api/v1/: __init__.py  assets.py  auth.py  licenses.py
proofchain01/backend/app/core/: config.py  exceptions.py  security.py
proofchain01/backend/app/db/: session.py
proofchain01/backend/app/dependencies/: auth.py
proofchain01/backend/app/models/: asset.py  user.py
proofchain01/backend/app/schemas/: asset.py  auth.py
proofchain01/backend/app/services/: asset_service.py  auth_service.py  blockchain_service.py  image_service.py
proofchain01/backend/migrations/: env.py
proofchain01/backend/migrations/versions/: 001_initial.py
proofchain01/backend/tests/: conftest.py  test_auth.py
